# AI-Risk-Annotator

./: .gitignore  descriptions.pickle  links.db  links.pickle  pyproject.toml  repository.csv  shortlist.txt
.streamlit/: config.toml
ai_risk_annotator/: app.py  form.py  llm.py  utils.py
ai_risk_annotator/pages/: analysis.py  annotator.py  automatic.py  instructions.py  results.py  thanks.py
ai_risk_taxonomy/: app.py
