[tool.poetry]
name = "ai-risk-annotator"
version = "0.1.0"
description = ""
authors = ["Djalel Benbouzid <coder@dbenbouzid.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
streamlit = "^1.38.0"
watchdog = "^4.0.0"
plotly = "^5.24.1"
beautifulsoup4 = "^4.12.3"
openpyxl = "^3.1.2"
st-gsheets-connection = "^0.0.4"
streamlit-markmap = "^1.0.1"
markdownify = "^0.11.6"
nltk = "^3.8.1"
html2text = "^2024.2.26"
trafilatura = "^1.8.1"
ollama = "^0.3.3"
stqdm = "^0.0.5"
marimo = "^0.7.16"
openai = "^1.46.1"
graphviz = "^0.20.3"
networkx = "^3.3"
matplotlib = "^3.9.1"
scipy = "^1.14.0"
litellm = {extras = ["proxy"], version = "^1.46.6"}
python-box = "^7.2.0"
pyautogen = "^0.3.0"
google-generativeai = "^0.8.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
